# molecule-lab

./: pyproject.toml  requirements.yml
roles/sudoers/defaults/: main.yml
roles/sudoers/molecule/default/: converge.yml  verify.yml
roles/sudoers/tasks/: main.yml
roles/sudoers/templates/: admins
tests/: test_molecule_lab.py
