[tool.poetry]
name = "molecule-lab"
version = "0.1.0"
description = ""
authors = ["TAKAHASHI Shuuji <shuuji3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
molecule = {extras = ["docker"], version = "^3.0.2"}
pytest-molecule = "^1.2.4"
pytest-testmon = "^1.0.2"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
